--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HydroSmart Dashboard</title>
-
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,7 +14,7 @@
   }
 
   .container {
-    max-width: 720px;
+    max-width: 650px;
     margin: 30px auto;
     background: #ffffffee;
     border-radius: 20px;
@@ -23,24 +22,38 @@
     box-shadow: 0 8px 25px rgba(0,0,0,0.25);
   }
 
-  header { text-align: center; margin-bottom: 30px; }
-  header h1 { color: #2e7d32; font-size: 2.5em; margin-bottom: 5px; }
-  header p { color: #555; font-size: 1.2em; }
+  header {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 
-  section { margin-bottom: 26px; }
+  header h1 {
+    color: #2e7d32;
+    font-size: 2.5em;
+    margin-bottom: 5px;
+  }
+
+  header p {
+    color: #555;
+    font-size: 1.2em;
+  }
+
+  section {
+    margin-bottom: 30px;
+  }
 
   h2 {
     color: #2e7d32;
     margin-bottom: 15px;
     border-bottom: 3px solid #2e7d32;
     padding-bottom: 5px;
-    font-size: 1.45em;
+    font-size: 1.5em;
   }
 
   select, button, input[type="date"] {
     width: 100%;
     padding: 15px;
-    margin-bottom: 12px;
+    margin-bottom: 15px;
     border-radius: 15px;
     border: 1px solid #ccc;
     font-size: 18px;
@@ -54,32 +67,32 @@
     cursor: pointer;
     transition: background 0.3s ease;
   }
-  button:hover { background-color: #1b5e20; }
 
-  .grid2 {
-    display: grid;
-    gap: 12px;
-    grid-template-columns: 1fr 1fr;
+  button:hover {
+    background-color: #1b5e20;
   }
-  @media(max-width: 650px) { .grid2 { grid-template-columns: 1fr; } }
 
   .status-section {
     background-color: #f1f8e9;
-    padding: 22px;
+    padding: 25px;
     border-radius: 20px;
     box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
   }
 
   .status-item {
-    font-size: 18px;
-    margin-bottom: 12px;
+    font-size: 20px;
+    margin-bottom: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 12px 15px;
     border-radius: 15px;
+    transition: all 0.3s ease;
   }
-  .status-item span { font-weight: bold; }
+
+  .status-item span {
+    font-weight: bold;
+  }
 
   .status-pump { background-color: #c8e6c9; color: #2e7d32; }
   .status-water { background-color: #b3e5fc; color: #0277bd; }
@@ -87,147 +100,145 @@
   .status-light { background-color: #fff9c4; color: #fbc02d; }
   .status-temp { background-color: #ffe0b2; color: #ef6c00; }
   .status-humidity { background-color: #f0f4c3; color: #827717; }
-  .status-water-temp { background-color: #e1bee7; color: #6a1b9a; }
+  .status-waterTemp { background-color: #e1bee7; color: #6a1b9a; }
 
-  .status-item i { margin-right: 12px; font-size: 1.3em; }
+  .status-item i { margin-right: 15px; font-size: 1.5em; }
 
-  .card {
-    background: #ffffffcc;
-    border-radius: 18px;
-    padding: 16px;
-    box-shadow: 0 4px 14px rgba(0,0,0,0.12);
+  /* NOVÉ: “ČO TERAZ?” karta */
+  .todo-card{
+    background: #ffffff;
+    border-radius: 20px;
+    padding: 18px 18px;
+    box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
+    border: 2px solid #2e7d32;
   }
+  .todo-title{
+    display:flex;
+    align-items:center;
+    gap:12px;
+    font-size: 22px;
+    font-weight: 800;
+    color:#1b5e20;
+    margin-bottom: 8px;
+  }
+  .todo-text{
+    font-size: 18px;
+    line-height: 1.35;
+    color:#222;
+    margin: 0 0 12px 0;
+  }
+  .todo-sub{
+    font-size: 14px;
+    color:#555;
+    margin: 0;
+  }
+  .pill{
+    display:inline-block;
+    padding: 6px 10px;
+    border-radius: 999px;
+    font-weight: 700;
+    font-size: 13px;
+    border:1px solid #ccc;
+    background:#fafafa;
+  }
+  .pill-ok{ border-color:#2e7d32; color:#2e7d32; }
+  .pill-warn{ border-color:#ef6c00; color:#ef6c00; }
+  .pill-bad{ border-color:#c62828; color:#c62828; }
 
-  .small { font-size: 14px; color: #666; }
-  .hint { margin-top: 10px; padding: 12px; border-radius: 14px; background: #fff; border: 1px dashed #bbb; }
-  .ok { color: #1b5e20; font-weight: 700; }
-  .bad { color: #b71c1c; font-weight: 700; }
+  .small-muted { font-size: 13px; color:#666; margin-top: 6px; }
+
+  @media(max-width: 500px){
+    .status-item { font-size: 18px; padding: 10px; }
+    header h1 { font-size: 2em; }
+    header p { font-size: 1em; }
+  }
 </style>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-
 </head>
 <body>
 <div class="container">
   <header>
     <h1>HydroSmart Dashboard</h1>
-    <p>Vyber rastlinu, fázu a sleduj stav hydroponickej veže</p>
+    <p>Jednoducho: systém maká sám, ty len spravíš to, čo si vypýta.</p>
   </header>
 
-  <!-- OVLÁDANIE -->
-  <section class="card">
-    <h2><i class="fas fa-sliders"></i> Ovládanie</h2>
+  <!-- ✅ NOVÉ: ČO TERAZ -->
+  <section>
+    <h2>Čo teraz?</h2>
+    <div class="todo-card">
+      <div class="todo-title">
+        <i class="fas fa-bolt"></i>
+        <span id="todoTitle">Načítavam stav…</span>
+        <span id="todoPill" class="pill">…</span>
+      </div>
+      <p id="todoText" class="todo-text">Počkaj sekundu, ťahám dáta z veže.</p>
+      <p id="todoSub" class="todo-sub">Tip: Ak si menil vodu, sprav “Nová nádrž” (2 dotyky na tlačidlo).</p>
+      <div class="small-muted" id="lastUpdateText">—</div>
+    </div>
+  </section>
 
-    <label class="small">Rastlina</label>
+  <!-- Nastavenie (iba raz) -->
+  <section>
+    <h2>Nastavenie (iba raz)</h2>
     <select id="plantSelect">
       <option value="">🌱 Vyber rastlinu</option>
-      <option value="salad">🥬 Hlávkový šalát</option>
+      <option value="salad_head">🥬 Hlávkový šalát</option>
       <option value="arugula">🥗 Rukola</option>
       <option value="basil">🌿 Bazalka</option>
       <option value="spinach">🌿 Špenát</option>
       <option value="chives">🧅 Pažítka</option>
       <option value="coriander">🌿 Koriander</option>
       <option value="mint">🌱 Mäta</option>
-      <option value="leafLettuce">🥬 Listový šalát (dubáčik / lollo)</option>
+      <option value="salad_leaf">🥬 Listový šalát (lollo/dubáčik)</option>
       <option value="parsley">🌿 Petržlen vňaťový</option>
       <option value="pakchoi">🥬 Pak choi (baby)</option>
     </select>
-    <button onclick="sendPlant()"><i class="fas fa-seedling"></i> Odoslať rastlinu</button>
 
-    <label class="small">Fáza</label>
-    <select id="phaseSelect">
-      <option value="">🧭 Vyber fázu</option>
-      <option value="germination">🌱 Klíčenie (iba voda)</option>
-      <option value="seedling">🌿 Zakoreňovanie (zakoreňovač)</option>
-      <option value="growth">🌾 Rast (hnojivo A+B)</option>
-    </select>
-    <button onclick="sendPhase()"><i class="fas fa-paper-plane"></i> Odoslať fázu</button>
+    <label class="small-muted" for="sowDate">Dátum výsevu (kedy si zasadil semienka)</label>
+    <input id="sowDate" type="date"/>
 
-    <div class="grid2">
-      <div>
-        <label class="small">Dátum výsevu</label>
-        <input id="sowDate" type="date" />
-      </div>
-      <div style="display:flex; gap:10px; align-items:end;">
-        <button style="flex:1;" onclick="saveSowDate()"><i class="fas fa-save"></i> Uložiť</button>
-        <button style="flex:1; background:#b71c1c;" onclick="clearSowDate()"><i class="fas fa-trash"></i> Zmazať</button>
-      </div>
-    </div>
-
-    <div class="hint">
-      <div><b>Vybraná rastlina:</b> <span id="plantName">--</span></div>
-      <div><b>Aktuálna fáza:</b> <span id="phaseName">--</span></div>
-      <div><b>Svetlo:</b> <span id="lightHours">--</span></div>
-    </div>
+    <button onclick="saveSetup()"><i class="fas fa-save"></i> Uložiť nastavenie</button>
+    <div class="small-muted" id="setupStatus">—</div>
   </section>
 
-  <!-- STATUS -->
+  <!-- Stav -->
   <section class="status-section">
-    <h2><i class="fas fa-tower-observation"></i> Status HydroVeže</h2>
+    <h2>Status HydroVeže</h2>
 
     <div class="status-item status-pump"><i class="fas fa-tint"></i> Pumpa: <span id="pumpStatus">--</span></div>
-    <div class="status-item status-water"><i class="fas fa-water"></i> Hladina vody: <span id="waterLevel">--</span></div>
-    <div class="status-item status-nutrients"><i class="fas fa-vial"></i> Živiny: <span id="nutrientsPct">--</span></div>
     <div class="status-item status-light"><i class="fas fa-lightbulb"></i> Svetlo: <span id="lightStatus">--</span></div>
+    <div class="status-item status-water"><i class="fas fa-water"></i> Hladina vody: <span id="waterLevel">--</span></div>
+
+    <div class="status-item status-nutrients"><i class="fas fa-vial"></i> Živiny: <span id="nutrientsPct">--</span></div>
+    <div class="small-muted">
+      Kalibrácia vody: <span id="calibrationStatus">--</span>
+      <br/>Baseline: <span id="baselinePpm">--</span> ppm | Koncentrácia: <span id="concPpm">--</span> ppm
+    </div>
+
+    <div style="height:10px"></div>
+
     <div class="status-item status-temp"><i class="fas fa-thermometer-half"></i> Teplota vzduchu: <span id="temperature">--</span></div>
     <div class="status-item status-humidity"><i class="fas fa-tint"></i> Vlhkosť: <span id="humidity">--</span></div>
-    <div class="status-item status-water-temp"><i class="fas fa-temperature-high"></i> Teplota vody: <span id="waterTemp">--</span></div>
+    <div class="status-item status-waterTemp"><i class="fas fa-temperature-low"></i> Teplota vody: <span id="waterTemp">--</span></div>
+
+    <div style="height:10px"></div>
+
+    <h2>Odporúčanie</h2>
+    <div class="small-muted">Rastlina: <span id="plantName">--</span> | Fáza: <span id="phaseName">--</span></div>
+    <div class="status-item status-nutrients"><i class="fas fa-clipboard-check"></i> Čo spraviť: <span id="recommendationText">--</span></div>
+    <div class="small-muted">Dávkovanie: <span id="dosingText">--</span></div>
   </section>
 
-  <!-- KALIBRÁCIA -->
-  <section class="card">
-    <h2><i class="fas fa-scale-balanced"></i> Kalibrácia vody (TDS baseline)</h2>
-    <div class="grid2">
-      <div class="hint">
-        <div><b>Stav:</b> <span id="calibrationStatus">--</span></div>
-        <div class="small">Baseline: <span id="baselinePpm">--</span></div>
-      </div>
-      <div class="hint">
-        <div><b>Cieľ pre fázu:</b> <span id="nutrientsTargetPct">--</span></div>
-        <div class="small">Pozn.: % je vypočítané z <b>koncentrácie</b> (TDS - baseline)</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ODPORÚČANIA -->
-  <section class="card">
-    <h2><i class="fas fa-leaf"></i> Odporúčania (živiny)</h2>
-    <div class="hint">
-      <div><b>Dávkovanie:</b> <span id="dosingText">--</span></div>
-      <div style="margin-top:8px;"><b>Odporúčanie:</b> <span id="nutrientHint">--</span></div>
-    </div>
-  </section>
-
-  <!-- ČASOVÁ OSA -->
-  <section class="card">
-    <h2><i class="fas fa-calendar-alt"></i> Časová os rastu</h2>
-
-    <div class="hint">
-      <div><b>Dní od výsevu:</b> <span id="daysFromSow">--</span></div>
-      <div style="margin-top:8px;" class="grid2">
-        <div>🌱 Klíčenie: <b><span id="germinationRange">--</span></b></div>
-        <div>🌿 Zakoreňovanie: <b><span id="rootingRange">--</span></b></div>
-      </div>
-      <div style="margin-top:8px;">🧺 Zber: <b><span id="harvestRange">--</span></b></div>
-      <div style="margin-top:10px;"><b>Ďalší krok:</b> <span id="nextAction">--</span></div>
-    </div>
-  </section>
-
-  <p class="small" style="text-align:center;">
-    HydroSmart © <span id="year"></span>
-  </p>
+  <div class="small-muted" style="text-align:center;margin-top:14px;">
+    Poznámka: Systém riadi pumpu/svetlo sám. Ty riešiš iba vodu a živiny, keď to appka povie.
+  </div>
 </div>
 
-<!-- Firebase SDK (v8) + AUTH -->
+<!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 
-<script>
-  document.getElementById("year").innerText = new Date().getFullYear();
-</script>
-
-<!-- Tvoj JS -->
 <script src="./app.js"></script>
 </body>
 </html>
